--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"url": "https://github.com/user/ebay-api-mcp-server/issues"
 	},
 	"dependencies": {
-		"@modelcontextprotocol/sdk": "1.0.4",
+		"@modelcontextprotocol/sdk": "^1.21.1",
 		"axios": "^1.7.9",
 		"dotenv": "^16.4.7",
 		"zod": "3"
