--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,70 +7,32 @@ on:
     branches: [main]
 
 jobs:
-  lint-and-format:
-    name: ESLint & Prettier Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10
-          run_install: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run ESLint
-        run: pnpm run lint
-
-      - name: Run Prettier check
-        run: pnpm run format:check
-
   test-with-coverage:
     name: Test with coverage on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    needs: lint-and-format
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest] # Run on multiple OS for broader compatibility
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20" # Use Node.js 20 LTS for consistency
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
           version: 10
-          run_install: false
+          run_install: false # Do not run install yet, we'll do it after caching
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV # Get pnpm store path for caching
 
       - name: Get pnpm store directory
         shell: bash
@@ -81,12 +43,17 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }} # Cache based on OS and lockfile hash
           restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+            ${{ runner.os }}-pnpm- # Restore key for partial matches
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: Install dependencies if cache is not hit
+        if: steps.setup-pnpm-cache.outputs.cache-hit != 'true'
+        run: pnpm install --no-frozen-lockfile # Install dependencies, allowing updates if lockfile is not perfectly matched
+      - name: Use cached dependencies
+        if: steps.setup-pnpm-cache.outputs.cache-hit == 'true'
+        run: pnpm install --frozen-lockfile # Use cached dependencies, ensuring lockfile is respected
 
       - name: Run tests with coverage
         run: pnpm run test:coverage
+        # This command assumes 'test:coverage' script is defined in package.json
